--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@elastic/elasticsearch": "^8.12.0",
     "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "docxtemplater": "^3.45.0",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
