--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@elastic/elasticsearch": "^8.12.0",
     "axios": "^1.6.7",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "docxtemplater": "^3.45.0",
     "dotenv": "^16.4.4",
@@ -26,6 +27,7 @@
     "jszip": "^3.10.1",
     "mammoth": "^1.6.0",
     "mariadb": "^3.2.3",
+    "multer": "^1.4.5-lts.1",
     "openai": "^4.26.1",
     "sequelize": "^6.37.1",
     "tough-cookie": "^4.1.3"
